chore(sonar): fix misc warnings